[feat] batches functionalities and refactoring of all tests and factories associated