@@ -1,192 +1,139 @@
 package com.MitoDev.FrostVault.dataFactories;
 
-import com.MitoDev.FrostVault.model.dto.BatchDTO;
+import com.MitoDev.FrostVault.model.dto.*;
 import com.MitoDev.FrostVault.model.entity.Batch;
+import com.MitoDev.FrostVault.model.entity.Product;
 import com.MitoDev.FrostVault.model.entity.Section;
-import org.springframework.cglib.core.Local;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 
 public class BatchFactory {
 
-    public static Batch batchPersisted1(){
+    private static final LocalDateTime MANUFACTURING_TIME = LocalDateTime.now().minus(2, ChronoUnit.YEARS);
+    private static final LocalDate MANUFACTURING_DATE = LocalDate.now().minus(2, ChronoUnit.YEARS);
+    private static final LocalDate DUE_DATE = LocalDate.now().plus(1, ChronoUnit.MONTHS);
+
+    public static Batch createBatch(Integer batchNumber, Product product) {
         return Batch.builder()
-                .batchNumber(1)
-                .product(ProductFactory.product1())
+                .batchNumber(batchNumber)
+                .product(product)
                 .initialQuantity(50)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
+                .manufacturingTime(MANUFACTURING_TIME)
+                .manufacturingDate(MANUFACTURING_DATE)
+                .dueDate(DUE_DATE)
                 .currentQuantity(50)
                 .section(SectionFactory.section1())
                 .build();
     }
 
-    public static Batch batchPersisted1With0Quantity(){
+    public static Batch createBatchWithQuantityAndDueDate(Integer batchNumber, Product product, Integer quantity, LocalDate dueDate){
         return Batch.builder()
-                .batchNumber(1)
-                .product(ProductFactory.product1())
+                .batchNumber(batchNumber)
+                .product(product)
                 .initialQuantity(50)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(0)
+                .manufacturingTime(MANUFACTURING_TIME)
+                .manufacturingDate(MANUFACTURING_DATE)
+                .dueDate(dueDate)
+                .currentQuantity(quantity)
                 .section(SectionFactory.section1())
                 .build();
     }
 
-    public static Batch batchPersisted2(){
+    public static List<Batch> createListOfBatches(Batch... batches) {
+        return Arrays.asList(batches);
+    }
+
+    public static BatchDTO createBatchDTO(Integer batchNumber, Integer productId){
+        return BatchDTO.builder()
+                .batchNumber(batchNumber)
+                .productId(productId)
+                .initialQuantity(50)
+                .currentTemperature(20D)
+                .manufacturingTime(MANUFACTURING_TIME)
+                .manufacturingDate(MANUFACTURING_DATE)
+                .dueDate(DUE_DATE)
+                .currentQuantity(50)
+                .build();
+    }
+
+    public static BatchDTO createBatchDTOWithCustomQuantity(Integer batchNumber, Integer productId, Integer quantity){
+        return BatchDTO.builder()
+                .batchNumber(batchNumber)
+                .productId(productId)
+                .initialQuantity(quantity)
+                .currentTemperature(20D)
+                .manufacturingTime(MANUFACTURING_TIME)
+                .manufacturingDate(MANUFACTURING_DATE)
+                .dueDate(DUE_DATE)
+                .currentQuantity(quantity)
+                .build();
+    }
+
+    public static Batch createBatchWithCustomQuantity(Integer batchNumber, Product product, Integer initialQuantity, Section section, Integer currentQuantity) {
         return Batch.builder()
-                .batchNumber(2)
-                .product(ProductFactory.product1())
-                .initialQuantity(50)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(50)
-                .section(SectionFactory.section1())
+                .product(product)
+                .batchNumber(batchNumber)
+                .initialQuantity(initialQuantity)
+                .manufacturingTime(MANUFACTURING_TIME)
+                .manufacturingDate(MANUFACTURING_DATE)
+                .dueDate(DUE_DATE)
+                .currentQuantity(currentQuantity)
+                .section(section)
                 .build();
     }
 
-
-    public static Batch batchNew1(){
-        return Batch.builder()
-                .product(ProductFactory.product1())
-                .initialQuantity(50)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(50)
-                .section(SectionFactory.section1())
-                .build();
-    }
-
-    public static Batch batchNew2(){
-        return Batch.builder()
-                .product(ProductFactory.product1())
-                .initialQuantity(50)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(50)
-                .section(SectionFactory.section1())
-                .build();
-    }
-    public static List<Batch> listOfBatchesNew(){
-        return List.of(batchNew1());
-    }
-
-    public static List<Batch> listOfBatchesWithOnePersistedAndOneNew(){
-        return List.of(batchPersisted1(), batchNew2());
-    }
-
-    public static List<Batch> listOfBatchesPersisted(){
-        return List.of(batchPersisted1());
-    }
-    public static List<Batch> listOfBatchesPersisted2(){
-        return List.of(batchPersisted1(), batchPersisted2());
-    }
-
-    public static List<Batch> listOfBatchPersisted2WithTooMuchQuantity(){
-        return List.of(batchPersisted1(), batchPersisted2());
-    }
-    public static List<Batch> listOfBatchesPersistedToUpdate(){
-        return List.of(batchPersisted1(), batchNew2());
-    }
-    public static BatchDTO batchRequestDTO1(){
+    public static BatchDTO createBatchResponseDTO(Integer batchNumber, Integer productId) {
         return BatchDTO.builder()
-                .productId(1)
+                .batchNumber(batchNumber)
+                .productId(productId)
                 .initialQuantity(50)
                 .currentTemperature(20D)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
+                .manufacturingTime(MANUFACTURING_TIME)
+                .manufacturingDate(MANUFACTURING_DATE)
+                .dueDate(DUE_DATE)
                 .currentQuantity(50)
                 .build();
     }
 
-    public static BatchDTO batchRequestExistentDTO1(){
-        return BatchDTO.builder()
-                .batchNumber(1)
-                .productId(1)
-                .initialQuantity(50)
-                .currentTemperature(20D)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
+    public static List<BatchDTO> createListOfBatchesDTO(BatchDTO... batches) {
+        return Arrays.asList(batches);
+    }
+
+    public static BatchStockResponseDTO createBatchStockResponseDTO(Integer productId, BatchBySectionDTO... batchBySectionDTOs) {
+        return BatchStockResponseDTO.builder()
+                .productId(productId)
+                .batchs(Arrays.asList(batchBySectionDTOs))
+                .build();
+    }
+
+    public static BatchBySectionDTO createBatchBySectionDTO(SectionDTO section, BatchSummaryDTO... batchSummaryDTOs) {
+        return BatchBySectionDTO.builder()
+                .section(section)
+                .batchesPerSection(Arrays.asList(batchSummaryDTOs))
+                .build();
+    }
+
+    public static BatchSummaryDTO createBatchSummaryDTO(Integer batchNumber) {
+        return BatchSummaryDTO.builder()
+                .batchNumber(batchNumber)
                 .currentQuantity(50)
+                .dueDate(LocalDate.now().plus(1, ChronoUnit.MONTHS))
                 .build();
     }
 
-    public static BatchDTO batchRequestDTO2(){
-        return BatchDTO.builder()
-                .productId(1)
-                .initialQuantity(50)
-                .currentTemperature(20D)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(50)
+    public static BatchSummaryDTO createBatchSummaryDTOWithCustomQuantityAndDueDate(Integer batchNumber, Integer quantity, LocalDate dueDate) {
+        return BatchSummaryDTO.builder()
+                .batchNumber(batchNumber)
+                .currentQuantity(quantity)
+                .dueDate(dueDate)
                 .build();
     }
 
-    public static BatchDTO batchRequestDTO2WithTooMuchQuantity(){
-        return BatchDTO.builder()
-                .productId(2)
-                .initialQuantity(5000)
-                .currentTemperature(20D)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(5000)
-                .build();
-    }
-
-    public static BatchDTO batchResponseDTO1(){
-        return BatchDTO.builder()
-                .batchNumber(1)
-                .productId(1)
-                .initialQuantity(50)
-                .currentTemperature(20D)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(50)
-                .build();
-    }
-
-    public static BatchDTO batchResponseDTO2(){
-        return BatchDTO.builder()
-                .batchNumber(2)
-                .productId(1)
-                .initialQuantity(50)
-                .currentTemperature(20D)
-                .manufacturingTime(LocalDateTime.of(2020, 2, 20, 20, 20))
-                .manufacturingDate(LocalDate.of(2020, 2, 20))
-                .dueDate(LocalDate.of(2024, 2, 20))
-                .currentQuantity(50)
-                .build();
-    }
-
-    public static List<BatchDTO> listOfBatchesRequestDTO1(){
-        return List.of(batchRequestDTO1());
-    }
-    public static List<BatchDTO> listOfBatchesRequestDTO2(){
-        return List.of(batchRequestExistentDTO1(), batchRequestDTO2());
-    }
-
-    public static List<BatchDTO> listOfBatchesRequestDTO2WithBatchesTooMuchQuantity(){
-        return List.of(batchRequestDTO1(), batchRequestDTO2WithTooMuchQuantity());
-    }
-
-    public static List<BatchDTO> listOfBatchesResponseDTO(){
-        return List.of(batchResponseDTO1());
-    }
-
-    public static List<BatchDTO> listOfBatchesResponseDTO2(){
-        return List.of(batchResponseDTO1(), batchResponseDTO2());
+    public static BatchStockDTO createBatchStockDTOWithBatches(BatchDTO batchDTOs) {
+        return new BatchStockDTO(Arrays.asList(batchDTOs));
     }
 }
