@@ -6,68 +6,34 @@ import com.MitoDev.FrostVault.model.dto.PurchaseOrderRequestDTO;
 import com.MitoDev.FrostVault.model.dto.PurchaseOrderTotalPriceResponseDTO;
 import com.MitoDev.FrostVault.model.entity.Product;
 import com.MitoDev.FrostVault.model.entity.PurchaseOrder;
+import com.MitoDev.FrostVault.model.entity.PurchaseOrderDetail;
+import com.MitoDev.FrostVault.model.entity.User;
 import com.MitoDev.FrostVault.model.entity.enums.PurchaseOrderStatus;
 
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 
 public class PurchaseOrderFactory {
 
-    public static PurchaseOrder getNewPurchaseOrder(){
-        return PurchaseOrder.builder()
-                .user(UserFactory.user1())
-                .date(LocalDate.now())
-                .purchaseOrderDetails(List.of())
-                .statusCode(PurchaseOrderStatus.CART)
-                .build();
-    }
+    
+    private static final LocalDate DATE = LocalDate.now();
 
-    public static PurchaseOrder getPurchaseOrderCreated(){
+    public static PurchaseOrder createPurchaseOrder(Integer idOrder, User user, PurchaseOrderStatus status, PurchaseOrderDetail... purchaseOrderDetails){
         return PurchaseOrder.builder()
-                .idOrder(1)
-                .user(UserFactory.user1())
-                .date(LocalDate.now().minus(1, ChronoUnit.MONTHS))
-                .purchaseOrderDetails(List.of())
-                .statusCode(PurchaseOrderStatus.CART)
-                .build();
-    }
-
-    public static PurchaseOrder getPurchaseOrderCreatedAddingOneProduct(){
-        return PurchaseOrder.builder()
-                .idOrder(1)
-                .user(UserFactory.user1())
-                .date(LocalDate.now().minus(1, ChronoUnit.MONTHS))
-                .purchaseOrderDetails(List.of(PurchaseOrderDetailsFactory.purchaseNewOrderDetail1()))
-                .statusCode(PurchaseOrderStatus.CART)
-                .build();
-    }
-
-    public static PurchaseOrder getPurchaseOrderCreatedWithOneProductPersisted(){
-        return PurchaseOrder.builder()
-                .idOrder(1)
-                .user(UserFactory.user1())
-                .date(LocalDate.now().minus(1, ChronoUnit.MONTHS))
-                .purchaseOrderDetails(List.of(PurchaseOrderDetailsFactory.purchaseOrderDetailPersisted1()))
-                .statusCode(PurchaseOrderStatus.CART)
-                .build();
-    }
-
-
-    public static PurchaseOrder getNewPurchaseOrderConfirmed(){
-        return PurchaseOrder.builder()
-                .idOrder(1)
-                .user(UserFactory.user1())
-                .date(LocalDate.now().minus(1, ChronoUnit.MONTHS))
-                .purchaseOrderDetails(List.of(PurchaseOrderDetailsFactory.purchaseNewOrderDetail1()))
-                .statusCode(PurchaseOrderStatus.CONFIRMED)
+                .idOrder(idOrder)
+                .user(user)
+                .date(DATE)
+                .purchaseOrderDetails(Arrays.asList(purchaseOrderDetails))
+                .statusCode(status)
                 .build();
     }
 
     public static PurchaseOrderRequestDTO getNewPurchaseOrderDTO(){
         return PurchaseOrderRequestDTO.builder()
                 .buyerId(1)
-                .date(LocalDate.now().minus(1, ChronoUnit.MONTHS))
+                .date(DATE.minus(1, ChronoUnit.MONTHS))
                 .products(List.of(ProductFactory.productDTO1()))
                 .statusCode("Cart")
                 .build();
@@ -81,7 +47,7 @@ public class PurchaseOrderFactory {
 
     public static PurchaseOrderTotalPriceResponseDTO totalOfAddingProduct1(){
         return PurchaseOrderTotalPriceResponseDTO.builder()
-                .totalPrice(25000D)
+                .totalPrice(50000D)
                 .build();
     }
 
